--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
-<meta charset="utf-8">
+<meta charset="utf=8">
 </head>
 <body>
 <table width=95% border="1" align="center">
 <tr>
 
 <td colspan="3"  width=650 height=100 align=center>
-NAG£ÓWEK
+NAGÂ£Ã“WEK
 
 </td>
 </tr>
@@ -16,7 +16,7 @@ NAG£ÓWEK
 <td width=18% align="center">
 <a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
 <br>
-<a href="http://www.zse.gda.pl" target="strony">ZSE Gdañsk</a>
+<a href="http://www.zse.gda.pl" target="strony">ZSE GdaÃ±sk</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -26,7 +26,7 @@ NAG£ÓWEK
 <tr>
 
 <td colspan="3"  width=650 height=100 align=center>
-STÓPKA
+STÃ“PKA
 
 </td>
 </tr>
